--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 
 :root{
-    --vermelho: #E50914;
+    --vermelho: yellow; /*A mudança para amarelo foi feita só para testar a variavel*/
     --preta: #141414;
 }
 
@@ -12,7 +12,7 @@
 
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -92,5 +92,20 @@ header nav a:hover{
 }
 
 .filme-principal .container{
-    width: 50%
+    width: 70%
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.subtitulo{
+    font-size: 20px;
+    font-weight: normal;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    
 }
