--- a/style/main.css
+++ b/style/main.css
@@ -65,10 +65,12 @@ header nav a:hover{
 }
 
 .botao{
+    text-decoration:none;
     background-color: rgba(0,0,0,.75);
     border:none;
     color: white;
     font-weight: bold;
+    width: 190px;
 
     padding: 15px 30px;
     margin-right: 15px;
@@ -109,3 +111,32 @@ header nav a:hover{
     margin-bottom: 10px;
     
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+  }
+
+  .modal:target {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .modal > div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 15px 20px;
+    background: #fff;
+  }
